--- a/src/app/add-employee-dialog/add-employee-dialog.component.html
+++ b/src/app/add-employee-dialog/add-employee-dialog.component.html
@@ -1,5 +1,5 @@
-<div class="w-full p-5 bg-slate-500">
-  <h1 mat-dialog-title class="w-full text-2xl text-white">Add Employee</h1>
+<div class="w-full p-5 bg-slate-300">
+  <h1 mat-dialog-title class="w-full text-2xl font-bold">Add Employee</h1>
   <div class="w-full" mat-dialog-content>
     <form #employeeForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="my-1">
