--- a/src/app/detail-employee-dialog/detail-employee-dialog.component.html
+++ b/src/app/detail-employee-dialog/detail-employee-dialog.component.html
@@ -1,11 +1,12 @@
-<div class="bg-slate-300 w-full p-2 shadow-lg">
-  <h1 class="font-bold text-4xl text-nowrap">
+<div class="flex flex-col bg-slate-300 w-full p-2 sm:p-10 shadow-lg">
+  <h1 class="font-bold text-4xl my-2">
     Employee Detail
     <span class="hidden sm:block"
       >( {{ employee.firstName }} {{ employee.lastName }} )</span
     >
   </h1>
-  <div class="flex flex-col p-2">
+
+  <div class="flex flex-col w-full p-2">
     <div class="my-1">
       <div>
         <span class="font-semibold text-xl">UserName</span> :
@@ -68,7 +69,7 @@
     </div>
   </div>
   <button
-    class="bg-sky-300 hover:bg-sky-400 text-white py-2 px-5 rounded-xl"
+    class="bg-sky-300 hover:bg-sky-400 text-white py-2 px-5 rounded-xl my-4 ml-2"
     (click)="onCancel()"
   >
     Ok
