--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,12 +1,11 @@
-<div class="flex justify-center">
-  <div
-    class="flex flex-col justify-center items-center bg-sky-500 rounded-xl mt-10 p-5"
-  >
+<div class="flex flex-row justify-center items-center bg-purple-200 w-full h-full px-80 py-52">
+
+  <div class="flex flex-col justify-center items-center rounded-l-xl bg-white w-full h-full shadow-lg">
     <h2 class="text-2xl font-semibold">Login</h2>
     <form (ngSubmit)="login()">
       <div class="my-5">
-        <label class="mx-4" for="username">Username</label>
-        <input
+        <label class="mx-4" for="username">Username : </label>
+        <input class="border border-black rounded-lg"
           matInput
           type="text"
           id="username"
@@ -16,8 +15,8 @@
         />
       </div>
       <div class="mb-5">
-        <label class="mx-4" for="password">Password</label>
-        <input
+        <label class="mx-4" for="password">Password : </label>
+        <input class="border border-black rounded-lg"
           matInput
           type="password"
           id="password"
@@ -28,7 +27,7 @@
       </div>
       <div class="flex justify-center">
         <button
-          class="text-lg bg-blue-600 hover:bg-blue-700 rounded-xl p-2 font-medium"
+          class="text-lg bg-blue-500 hover:bg-blue-600 rounded-xl px-5 py-2 font-medium"
           type="submit"
         >
           Login
@@ -37,7 +36,14 @@
     </form>
   </div>
 
-  <div translate>
-    <lib-toastify-toast-container></lib-toastify-toast-container>
+  <div class="flex justify-center items-center bg-cyan-500 rounded-r-xl w-full h-full shadow-lg">
+    
+    <img src="../../assets/management.png" alt="">
+    
   </div>
+  
+</div>
+
+<div translate>
+  <lib-toastify-toast-container></lib-toastify-toast-container>
 </div>
