--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -38,7 +38,7 @@
 
   <div class="flex justify-center items-center bg-cyan-500 rounded-r-xl w-full h-full shadow-lg">
     
-    <img src="../../assets/management.png" alt="">
+    <img class="w-2/3" src="../../assets/management.png" alt="">
     
   </div>
   
